# Brokerz

./: .README  .env.example  .gitignore  README.md  ecosystem-backend.json  ecosystem-frontend.json
backend/: Dockerfile  build.sh  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260516_0001_workspace_foundation.py  20260517_0002_portfolio_recommendation_flow.py  487f8223b0b8_add_market_views.py  5f54d0b7e098_add_ws_recommendations_and_events.py  68e47f0713d5_remove_legacy_recommendations.py  7e9d14417e07_enable_rls_on_all_tables.py  8b2d0f5c1a77_add_daily_briefs.py  a2d7c9f4e3b1_improve_market_views.py  fcdf6622e73a_add_missing_portfolio_and_inquiry_tables.py
backend/chroma_db/: chroma.sqlite3
backend/data/: listed_shares_cache.json
backend/scripts/: backfill_listed_shares.py  debug_threads.py  diag_all.py  fix_user_data.py  seed_dnse_batches.py  seed_profiles.py
backend/src/: config.py  database.py  scheduler.py
backend/src/api/: main.py  schemas.py
backend/src/api/routers/: dashboard_layout.py  inquiry.py  market.py  notification.py  portfolio.py  profile.py  report.py
backend/src/cache/: db.py  state.py
backend/src/models/: __init__.py  schema.py  sync.py
backend/src/modules/daily_briefs/: router.py
backend/src/services/: ai_engine.py  data_aggregator.py  dnse_service.py  market_data_aggregator.py  market_logic.py  rag_service.py  ssi_service.py  sync_manager.py
backend/src/ui/: dashboard.py
backend/src/workers/: market_streamer.py
backend/tests/: test_market_apis.py
docs/: schema_v2.sql
(+43 files in other folders)
